<resources>
    <string name="app_name">PcMind</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="name">full Name</string>
    <string name="email">Email</string>
    <string name="repwd">Retype Your Passsword</string>
    <string name="Mobile">Mobile Number optional</string>
    <string name="reset_password">Reset Password</string>
    <string name="register"> <b>Sign Up</b></string>
    <string name="signin">Sign In</string>
    <string name="nottHaveanAccount">Donn\'t Have an Account</string>
    <string name="HaveanAccount">Have an Account</string>
    <string name="donn_t_remember_your_password">Donn\'t Remember Your Password</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">List Of Products</string>
    <string name="second_fragment_label">Add Product</string>
    <string name="Save">Save</string>
    <string name="previous">Previous</string>

    <string name="AddProduct">Add Product</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_Products">Products</string>
    <string name="title_Shopping">Shopping Card</string>
    <string name="title_fav">Favorite</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ProductList">Products</string>
    <string name="menu_addProduct">Add Product</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>