<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_ProductList">

    <fragment
        android:id="@+id/navigation_ProductList"
        android:name="com.example.pcmind.Clients.ui.product.ProductListFragment"
        android:label="@string/title_Products"
        tools:layout="@layout/fragment_user_product" />

    <fragment
        android:id="@+id/navigation_ShoppingCard"
        android:name="com.example.pcmind.Clients.ui.Shopping.ShoppingCardFragment"
        android:label="@string/title_Shopping"
        tools:layout="@layout/fragment_user_shoppingcard" />

    <fragment
        android:id="@+id/navigation_Favorite"
        android:name="com.example.pcmind.Clients.ui.Favorite.FavoriteFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_user_favorite" />
</navigation>