<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".Auth.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="0dp"
        android:src="@mipmap/ic_logo"
        android:id="@+id/ivLogo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="0dp"
        android:hint="@string/user_name"
        android:layout_weight="1"
        android:id="@+id/etUserNameLoginActivity"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/password"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:id="@+id/etPasswordLoginActivity"
        />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/reset_password"
            android:textSize="18dp"
            android:padding="20dp"
            android:textColor="@color/purple_700"
            android:id="@+id/tvResetPasswordLoginActivity"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Login"
        android:layout_weight="1"
        android:id="@+id/btnLoginLoginActivity"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:text="@string/nottHaveanAccount"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:text="@string/register"
            android:textSize="18dp"
            android:padding="10dp"
            android:textColor="@color/purple_500"
            android:id="@+id/tvRegisterLoginActivity"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>